syntax = "proto3";
package osmosis.concentratedliquidity.v1beta1;

import "gogoproto/gogo.proto";
import "osmosis/concentrated-liquidity/params.proto";

import "cosmos/base/v1beta1/coin.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

import "osmosis/concentrated-liquidity/position.proto";

option go_package = "github.com/osmosis-labs/osmosis/v15/x/concentrated-liquidity/types/query";

service Query {
  // Pools returns all concentrated liquidity pools
  rpc Pools(QueryPoolsRequest) returns (QueryPoolsResponse) {
    option (google.api.http).get =
        "/osmosis/concentratedliquidity/v1beta1/pools";
  }

  // Params returns concentrated liquidity module params.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get =
        "/osmosis/concentratedliquidity/v1beta1/params";
  }

  // UserPositions returns all concentrated postitions of some address.
  rpc UserPositions(QueryUserPositionsRequest)
      returns (QueryUserPositionsResponse) {
    option (google.api.http).get =
        "/osmosis/concentratedliquidity/v1beta1/positions/{address}";
  }

  // TotalLiquidityForRange the amount of liquidity existing within given range.
  rpc TotalLiquidityForRange(QueryTotalLiquidityForRangeRequest)
      returns (QueryTotalLiquidityForRangeResponse) {
    option (google.api.http).get =
        "/osmosis/concentratedliquidity/v1beta1/total_liquidity_for_range";
  }

  // LiquidityNetInDirection returns liquidity net in the direction given.
  // Uses the bound if specified, if not uses either min tick / max tick
  // depending on the direction.
  rpc LiquidityNetInDirection(QueryLiquidityNetInDirectionRequest)
      returns (QueryLiquidityNetInDirectionResponse) {
    option (google.api.http).get = "/osmosis/concentratedliquidity/v1beta1/"
                                   "query_liquidity_net_in_direction";
  }

  // ClaimableFees returns the amount of fees that can be claimed by a position
  // with the given id.
  rpc ClaimableFees(QueryClaimableFeesRequest)
      returns (QueryClaimableFeesResponse) {
    option (google.api.http).get =
        "/osmosis/concentratedliquidity/v1beta1/claimable_fees";
  };

  // PositionById returns a position with the given id.
  rpc PositionById(QueryPositionByIdRequest)
      returns (QueryPositionByIdResponse) {
    option (google.api.http).get =
        "/osmosis/concentratedliquidity/v1beta1/position_by_id";
  };
}

//=============================== UserPositions
message QueryUserPositionsRequest {
  string address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];
  uint64 pool_id = 2 [ (gogoproto.moretags) = "yaml:\"pool_id\"" ];
}

message QueryUserPositionsResponse {
  repeated PositionWithUnderlyingAssetBreakdown positions = 1
      [ (gogoproto.nullable) = false ];
}

//=============================== PositionById
message QueryPositionByIdRequest {
  uint64 position_id = 1 [ (gogoproto.moretags) = "yaml:\"position_id\"" ];
}

message QueryPositionByIdResponse {
  PositionWithUnderlyingAssetBreakdown position = 1
      [ (gogoproto.nullable) = false ];
}

//=============================== Pools
message QueryPoolsRequest {
  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}
message QueryPoolsResponse {
  repeated google.protobuf.Any pools = 1
      [ (cosmos_proto.accepts_interface) = "PoolI" ];

  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

//=============================== ModuleParams
message QueryParamsRequest {}
message QueryParamsResponse {
  Params params = 1 [ (gogoproto.nullable) = false ];
}

message TickLiquidityNet {
  string liquidity_net = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"liquidity_net\"",
    (gogoproto.nullable) = false
  ];
  string tick_index = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"tick\"",
    (gogoproto.nullable) = false
  ];
}

message LiquidityDepthWithRange {
  string liquidity_amount = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"liquidity_net\"",
    (gogoproto.nullable) = false
  ];
  string lower_tick = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"tick\"",
    (gogoproto.nullable) = false
  ];
  string upper_tick = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"tick\"",
    (gogoproto.nullable) = false
  ];
}

//=============================== LiquidityNetInDirection
message QueryLiquidityNetInDirectionRequest {
  uint64 pool_id = 1 [ (gogoproto.moretags) = "yaml:\"pool_id\"" ];
  string token_in = 2 [ (gogoproto.moretags) = "yaml:\"token_in\"" ];
  string start_tick = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"start_tick\"",
    (gogoproto.nullable) = true
  ];
  string bound_tick = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"bound_tick\"",
    (gogoproto.nullable) = true
  ];
}
message QueryLiquidityNetInDirectionResponse {
  repeated TickLiquidityNet liquidity_depths = 1
      [ (gogoproto.nullable) = false ];
  int64 current_tick = 2;
  string current_liquidity = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"current_liquidity\"",
    (gogoproto.nullable) = false
  ];
}

//=============================== TotalLiquidityForRange
message QueryTotalLiquidityForRangeRequest {
  uint64 pool_id = 1 [ (gogoproto.moretags) = "yaml:\"pool_id\"" ];
}
message QueryTotalLiquidityForRangeResponse {
  repeated LiquidityDepthWithRange liquidity = 1
      [ (gogoproto.nullable) = false ];
}

// ===================== MsgQueryClaimableFees
message QueryClaimableFeesRequest {
  uint64 position_id = 1 [ (gogoproto.moretags) = "yaml:\"position_id\"" ];
}

message QueryClaimableFeesResponse {
  repeated cosmos.base.v1beta1.Coin claimable_fees = 1 [
    (gogoproto.moretags) = "yaml:\"claimable_fees\"",
    (gogoproto.nullable) = false
  ];
}